--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,22 +4,22 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: 主页/Home
     url: '#about'
     weight: 10
-  - name: Posts
+  - name: 新闻/News
     url: '#posts'
     weight: 20
-  - name: Projects
+  - name: 研究/Research
     url: '#projects'
     weight: 30
-  - name: Talks
+  - name: /Talks
     url: '#talks'
     weight: 40
-  - name: Publications
+  - name: 文章/Publications
     url: '#featured'
     weight: 50
-  - name: Contact
+  - name: 联系/Contact
     url: '#contact'
     weight: 60
 
