--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: 黄淦/Huang Gan # Website name
+title: Huang Gan # Website name
 baseurl: 'huanggan.site' # Website URL
 copyright: '@{2021} Huang Gan' # Footer text, e.g. '© {year} Me'
 
