--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -15,7 +15,7 @@ en:
 zh:
   languageCode: zh-Hans
   #contentDir: content/zh
-  title: 黄淦 |
+  title: 黄淦
   params:
     description:  深圳大学生物医学工程学院
 #  menu:
