--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -85,12 +85,12 @@ edit_page:
   content_dir: ''
   repo_branch: main
   editable:
-    page: ture
+    page: false
     post: false
     book: false
 show_related:
   book: true
-  page: ture
+  page: false
   post: true
   project: true
   publication: true
