--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,8 +16,8 @@ main:
   - name: 文章/Publications
     url: '#featured'
     weight: 40
-  - name: 联系/Contact
-    url: '#contact'
+  - name: 成员/People
+    url: 'people'
     weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
