--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,12 @@ main:
   - name: 新闻/News
     url: '#posts'
     weight: 20
-  - name: 文章/Publications
+  - name: 精选/Featured
     url: '#featured'
     weight: 30
+  - name: 文章/Publications
+    url: '#publications'
+    weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
